# gpu-native-os

./: CLAUDE.md  Cargo.toml  GPU Desktop.command  README.md  benchmark_modes.sh  benchmark_results.csv  frame_results.csv  gpu_ripgrep_benchmark.csv  sdf_atlas_debug.pgm  sdf_render_test.ppm  translate_test.rs
.cargo/: config.toml
.claude/commands/: codex.md  gemini.md  grok.md  metal-compute.md  review.md
apps/boids.gpuapp/: main.metal  manifest.toml
apps/hello_gpu.gpuapp/: main.metal  manifest.toml
apps/particles.gpuapp/: main.metal  manifest.toml
apps/plasma.gpuapp/: main.metal  manifest.toml
archive/: spinning_ball_demo.rs
archive/cpu_centric_app_system/: README.md  app_descriptor.rs  app_lifecycle.rs  gpu_memory_pool.rs  gpu_resident.rs  pipeline_table.rs  slot_allocator.rs
archive/desktop_cpu_centric/: desktop_wrapper.rs  gpu_desktop.rs  test_issue_144_desktop_wrapper.rs
archive/gpu_ripgrep/: gpu_ripgrep.rs  gpu_ripgrep_bench.rs  gpu_ripgrep_profiler.rs
archive/persistent_runtime_minimal_vm/: persistent_runtime.metal  persistent_runtime.rs  test_persistent_runtime.rs
archive/rdma/: RDMA_CLUSTER_ARCHITECTURE.md
archive/sdf_text/: atlas.rs  atlas_data.rs  embedded_renderer.rs  generate_sdf_atlas.rs  renderer.rs  sdf_diagnostic.rs  sdf_render_test.rs  sdf_text_demo.rs
docs/: AI_REVIEW_SUMMARY.md  ARCHITECTURE_GPU_IS_THE_COMPUTER.md  AUDIO_SPECTRUM_VISUALIZER_PRD.md  BALL_PHYSICS_PLAYGROUND_PRD.md  BENCHMARKING_SUMMARY.md  BITMAP_FONT_MIGRATION_PLAN.md  DEBUG_GPU_APP_FAILURES.md  FORCE_DIRECTED_GRAPH_PRD.md  FRACTAL_TERRAIN_PRD.md  GAME_OF_LIFE_PRD.md  GOAL_VS_DEBATE_COMPARISON.md  GPU_ARCHITECTURE_DEBATE_FINAL.md  GPU_AS_COMPUTER.md  GPU_BROWSER_ARCHITECTURE.md  GPU_BROWSER_ROADMAP.md  GPU_CAPABILITIES_RESEARCH.md  GPU_CRASH_PREVENTION_GUIDE.md  GPU_DIRECT_STORAGE_RESEARCH.md  GPU_EXECUTION_MODEL_AI_DEBATE.md  GPU_EXECUTION_MODEL_DISCUSSION.md  GPU_FILESYSTEM_ALGORITHMS_RESEARCH.md  GPU_INFRASTRUCTURE_MAP.md  GPU_NATIVE_DOCUMENT_VIEWER_PRD.md  GPU_NATIVE_FILESYSTEM_PRD.md  GPU_NATIVE_OS_V2_PRD.md  GPU_NETWORK_ARCHITECTURE.md  GPU_OS_PRD.md  GPU_SEARCH_OPTIMIZATION_ROADMAP.md  HONEST_STATUS_ASSESSMENT.md  ISSUE_128_SIBLING_CUMULATIVE_HEIGHTS_PRD.md  ISSUE_129_FILESYSTEM_HASH_TABLE_PRD.md  ISSUE_130_DEPTH_BUFFER_PRD.md  ISSUE_131_TWO_PASS_TEXT_LAYOUT_PRD.md  ISSUE_132_STREAMING_IO_PRD.md  ISSUE_133_PERSISTENT_SEARCH_KERNEL_PRD.md  ISSUE_134_GPU_DESKTOP_ENVIRONMENT_PRD.md  ISSUE_135_SHARED_GPU_FILESYSTEM_INDEX_PRD.md  ISSUE_140_BATCH_LAYOUT_PASSES_PRD.md  ISSUE_141_GPU_DRIVEN_DEPTH_PROPAGATION_PRD.md  ISSUE_142_ASYNC_FRAME_CALLBACKS_PRD.md  (+81 more)
docs/gpu_browser_issues/: ISSUE_102_HTML5_PARSER.md  ISSUE_103_CSS_PARSER.md  ISSUE_104_GPU_SELECTOR_MATCHING.md  ISSUE_105_GPU_CASCADE.md  ISSUE_106_GPU_LAYOUT.md  ISSUE_107_GPU_TEXT.md  ISSUE_108_PARALLEL_PREFIX_SUM.md  ISSUE_109_BENCHMARKING.md  README.md
docs/issues/: ISSUE_094_EXTERNAL_CSS_LOADING.md  ISSUE_095_CSS_PARSING_GPU.md  ISSUE_096_SELECTOR_MATCHING.md  ISSUE_097_STYLE_CASCADE.md  ISSUE_098_FORMATTING_CONTEXTS.md  ISSUE_099_BLOCK_LAYOUT_REWRITE.md  ISSUE_100_INLINE_LAYOUT.md  ISSUE_101_INTEGRATION_TESTING.md
examples/: ball_physics.rs  benchmark_async_search.rs  benchmark_auto.rs  benchmark_frame.rs  benchmark_gpu_string.rs  benchmark_hittest.rs  benchmark_index_load.rs  benchmark_memory_bandwidth.rs  benchmark_realistic.rs  benchmark_ripgrep_comparison.rs  benchmark_smart_load.rs  benchmark_sort.rs  benchmark_visual.rs  boids.rs  build_shared_index.rs  bytecode_test.rs  bytecode_visual_test.rs  bytecode_window.rs  desktop_visual_test.rs  document_images.rs  document_pipeline_demo.rs  document_viewer.rs  fast_search_kernel.rs  file_editor.rs  filesystem_batch_demo.rs  filesystem_benchmark.rs  filesystem_browser.rs  filesystem_cache_demo.rs  filesystem_content_search.rs  filesystem_cpu_comparison.rs  filesystem_interactive.rs  filesystem_path_lookup.rs  filesystem_profile.rs  filesystem_real.rs  filesystem_scan.rs  filesystem_search.rs  filesystem_ui.rs  game_of_life.rs  generate_sdf_atlas.rs  gpu_desktop.rs  (+24 more)
gpu_dsl/: Cargo.toml
gpu_dsl/src/: lib.rs
gpu_dsl_macro/: Cargo.toml
gpu_dsl_macro/src/: ast.rs  codegen.rs  lib.rs  parser.rs  regalloc.rs
gpu_std/: Cargo.toml
gpu_std/docs/: GPU_COLLECTIONS_DESIGN.md
gpu_std/src/: lib.rs
gpu_std/src/collections/: binary_heap.rs  hashmap.rs  hashset.rs  linked_list.rs  mod.rs  vecdeque.rs
src/: lib.rs
src/gpu_fs/: mod.rs  types.rs
src/gpu_os/: app.rs  ball_physics.rs  batch_io.rs  benchmark_visual.rs  boids.rs  boot_sequence.rs  content_pipeline.rs  content_search.rs  document_app.rs  duplicate_finder.rs  event_loop.rs  filesystem.rs  game_of_life.rs  gpu_app_loader.rs  gpu_app_system.rs  gpu_cache.rs  mod.rs  (+33 more)
test_data/gpu_wasm_app/: Cargo.toml
test_data/gpu_wasm_app/src/: lib.rs
test_programs/apps/hashmap_test/: Cargo.toml
test_programs/apps/hashmap_test/src/: lib.rs
tests/: bench_gpu_memory.rs  test_denormal.rs  test_external_wasm_programs.rs  test_fair_benchmark.rs  test_gpu_app_system.rs  test_gpu_bytecode_vm.rs  test_gpu_execution.rs  test_gpu_file_write.rs  test_gpu_hashmap.rs  test_gpu_native_allocation.rs  test_gpu_native_document.rs  test_gpu_runtime_fonts.rs  test_gpu_shell.rs  test_harness_smoke.rs  test_inline_function_spill.rs  test_internet_crates.rs  test_issue_102_predication.rs  test_issue_103_presort.rs  test_issue_104_simd_primitives.rs  test_issue_105_branchfree_math.rs  test_issue_106_persistent_threads.rs  test_issue_112_gpu_io.rs  test_issue_11_kernel.rs  test_issue_125_gpu_batch_io.rs  test_issue_126_parallel_compact.rs  test_issue_127_gpu_cache.rs  test_issue_128_cumulative_heights.rs  test_issue_129_filesystem_hash.rs  test_issue_12_memory.rs  test_issue_130_depth_buffer.rs  test_issue_131_two_pass_text.rs  test_issue_132_streaming_io.rs  test_issue_133_persistent_kernel.rs  test_issue_135_shared_index.rs  test_issue_13_input.rs  test_issue_141_manifest.rs  test_issue_142_discovery.rs  test_issue_143_dynamic_gpu_app.rs  test_issue_145_terminal_integration.rs  test_issue_146_e2e.rs  (+76 more)
wasm_translator/: Cargo.toml
(+120 files in other folders)
