[package]
name = "rust-experiment"
version = "0.1.0"
edition = "2021"
description = "GPU-Native OS: A single-threadgroup operating system running entirely on the GPU"
authors = ["Patrick Kavanagh"]

[lib]
name = "rust_experiment"
path = "src/lib.rs"

[[example]]
name = "gpu_os_demo"
path = "examples/gpu_os_demo.rs"

[[example]]
name = "game_of_life"
path = "examples/game_of_life.rs"

[[example]]
name = "ball_physics"
path = "examples/ball_physics.rs"

[[example]]
name = "text_editor"
path = "examples/text_editor.rs"

[[example]]
name = "particles"
path = "examples/particles.rs"

[[example]]
name = "boids"
path = "examples/boids.rs"

[[example]]
name = "waves"
path = "examples/waves.rs"

[[example]]
name = "mandelbrot"
path = "examples/mandelbrot.rs"

[[example]]
name = "metaballs"
path = "examples/metaballs.rs"

[[example]]
name = "benchmark_sort"
path = "examples/benchmark_sort.rs"

[[example]]
name = "benchmark_hittest"
path = "examples/benchmark_hittest.rs"

[[example]]
name = "benchmark_visual"
path = "examples/benchmark_visual.rs"

[[example]]
name = "filesystem_browser"
path = "examples/filesystem_browser.rs"

[[example]]
name = "document_viewer"
path = "examples/document_viewer.rs"

[[example]]
name = "document_pipeline_demo"
path = "examples/document_pipeline_demo.rs"

[[example]]
name = "document_images"
path = "examples/document_images.rs"

[[example]]
name = "vector_demo"
path = "examples/vector_demo.rs"

[dependencies]
metal = { version = "0.33", features = ["dispatch"] }
cocoa = "0.26"
core-graphics-types = "0.2"
objc = "0.2"
winit = "0.30"
half = "2.4"
ureq = "2.9"
ttf-parser = "0.25"  # TrueType/OpenType font parsing for SDF text
dispatch = "0.2"     # GCD dispatch queues for SharedEvent callbacks
block = "0.1"        # Objective-C blocks for Metal callbacks
libc = "0.2"         # mmap syscalls for zero-copy buffers (#82)

[dev-dependencies]
tempfile = "3"       # Temporary files for tests
