[workspace]
members = [".", "wasm_translator", "gpu_std"]
exclude = [
    "test_data/gpu_wasm_app",
    "test_programs/external/bubble_sort",
    "test_programs/external/crc32",
    "test_programs/external/fastrand",
    "test_programs/external/fnv_hash",
    "test_programs/external/mandelbrot",
    "test_programs/external/prime_sieve",
    "test_programs/external/siphasher",
    "test_programs/external/xxhash",
    "test_programs/external/base64",
    "test_programs/internet/gcd",
    "test_programs/internet/factorial",
    "test_programs/internet/sum_digits",
    "test_programs/internet/collatz",
    "test_programs/internet/fizzbuzz",
    "test_programs/apps/game_of_life",
    "test_programs/apps/snake",
    "test_programs/apps/pong",
    "test_programs/apps/clock",
    "test_programs/apps/mandelbrot_interactive",
    "test_programs/apps/game_2048",
    "test_programs/apps/particles",
    "test_programs/apps/bouncing_balls",
    "test_programs/apps/drawing",
]
resolver = "2"

[package]
name = "rust-experiment"
version = "0.1.0"
edition = "2021"
description = "GPU-Native OS: A single-threadgroup operating system running entirely on the GPU"
authors = ["Patrick Kavanagh"]

[lib]
name = "rust_experiment"
path = "src/lib.rs"

[[example]]
name = "gpu_os_demo"
path = "examples/gpu_os_demo.rs"

[[example]]
name = "game_of_life"
path = "examples/game_of_life.rs"

[[example]]
name = "ball_physics"
path = "examples/ball_physics.rs"

[[example]]
name = "text_editor"
path = "examples/text_editor.rs"

[[example]]
name = "particles"
path = "examples/particles.rs"

[[example]]
name = "boids"
path = "examples/boids.rs"

[[example]]
name = "waves"
path = "examples/waves.rs"

[[example]]
name = "mandelbrot"
path = "examples/mandelbrot.rs"

[[example]]
name = "metaballs"
path = "examples/metaballs.rs"

[[example]]
name = "benchmark_sort"
path = "examples/benchmark_sort.rs"

[[example]]
name = "benchmark_hittest"
path = "examples/benchmark_hittest.rs"

[[example]]
name = "benchmark_visual"
path = "examples/benchmark_visual.rs"

[[example]]
name = "filesystem_browser"
path = "examples/filesystem_browser.rs"

[[example]]
name = "document_viewer"
path = "examples/document_viewer.rs"

[[example]]
name = "document_pipeline_demo"
path = "examples/document_pipeline_demo.rs"

[[example]]
name = "document_images"
path = "examples/document_images.rs"

[[example]]
name = "vector_demo"
path = "examples/vector_demo.rs"

[[example]]
name = "webview_browser"
path = "examples/webview_browser.rs"

# Additional benchmarks
[[example]]
name = "benchmark_async_search"
path = "examples/benchmark_async_search.rs"

[[example]]
name = "benchmark_auto"
path = "examples/benchmark_auto.rs"

[[example]]
name = "benchmark_frame"
path = "examples/benchmark_frame.rs"

[[example]]
name = "benchmark_gpu_string"
path = "examples/benchmark_gpu_string.rs"

[[example]]
name = "benchmark_realistic"
path = "examples/benchmark_realistic.rs"

# File and filesystem utilities
[[example]]
name = "file_editor"
path = "examples/file_editor.rs"

[[example]]
name = "filesystem_batch_demo"
path = "examples/filesystem_batch_demo.rs"

[[example]]
name = "filesystem_benchmark"
path = "examples/filesystem_benchmark.rs"

[[example]]
name = "filesystem_cache_demo"
path = "examples/filesystem_cache_demo.rs"

[[example]]
name = "filesystem_cpu_comparison"
path = "examples/filesystem_cpu_comparison.rs"

[[example]]
name = "filesystem_interactive"
path = "examples/filesystem_interactive.rs"

[[example]]
name = "filesystem_path_lookup"
path = "examples/filesystem_path_lookup.rs"

[[example]]
name = "filesystem_profile"
path = "examples/filesystem_profile.rs"

[[example]]
name = "filesystem_real"
path = "examples/filesystem_real.rs"

[[example]]
name = "filesystem_scan"
path = "examples/filesystem_scan.rs"

[[example]]
name = "filesystem_search"
path = "examples/filesystem_search.rs"

[[example]]
name = "filesystem_ui"
path = "examples/filesystem_ui.rs"

# Diagnostics
[[example]]
name = "render_diagnostic"
path = "examples/render_diagnostic.rs"

[[example]]
name = "visual_qa"
path = "examples/visual_qa.rs"

# Note: servo_browser not registered - requires embedder_traits crate (incomplete)

[dependencies]
metal = { version = "0.33", features = ["dispatch"] }
cocoa = "0.26"
core-graphics-types = "0.2"
objc = "0.2"
winit = "0.30"
half = "2.4"
ureq = "2.9"
ttf-parser = "0.25"  # TrueType/OpenType font parsing for SDF text
dispatch = "0.2"     # GCD dispatch queues for SharedEvent callbacks
block = "0.1"        # Objective-C blocks for Metal callbacks
libc = "0.2"         # mmap syscalls for zero-copy buffers (#82)
wry = "0.24"         # Cross-platform WebView (uses system WebKit on macOS)
memchr = "2.7"       # SIMD-accelerated byte search for CPU fast path
chrono = { version = "0.4", features = ["serde"] }  # Date/time for index timestamps (#135)
dirs = "5"           # Platform-specific directories (~/.gpu_os) (#135)
serde = { version = "1.0", features = ["derive"] }  # Serialization for index manifest (#135)
serde_json = "1.0"   # JSON serialization for manifest.json (#135)
toml = "0.8"         # TOML parsing for .gpuapp manifests (#141)
rayon = "1.10"       # Parallel iterators for fast directory scanning (#135)

[dev-dependencies]
tempfile = "3"       # Temporary files for tests
wasm_translator = { path = "wasm_translator" }  # WASM→GPU bytecode translator (#174)
wat = "1.0"          # WAT text format parsing for register exhaustion tests
wasmtime = "19.0"    # CPU reference execution for differential testing (#190)
gpu_std = { path = "gpu_std", features = ["std"] }  # GPU standard library for HashMap tests (with std for host testing)

[[example]]
name = "gpu_ripgrep"
path = "examples/gpu_ripgrep.rs"

# ARCHIVED: gpu_desktop - Was CPU-centric, replaced by megakernel

[[example]]
name = "gpu_shell"
path = "examples/gpu_shell.rs"

# Issue #162 - Visual Megakernel Demo
[[example]]
name = "visual_megakernel"
path = "examples/visual_megakernel.rs"

[[example]]
name = "visual_wasm_apps"
path = "examples/visual_wasm_apps.rs"
